<resources>
    <string name="app_name">TimeToStudy</string>
    <string name="time_to_study">Time To Study</string>
    <string name="timer_20_00">Timer = 20:00</string>
    <string name="icon_pomodoro">Pomodoro</string>
    <string name="icon_analytics">Analytics</string>
    <string name="pomodoro_fragment">Pomodoro</string>
    <string name="analytics_fragment">Analytics</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="twentyFive_min">25 min</string>
    <string name="ten_min">10 min</string>
    <string name="five_min">5 min</string>
    <string name="stop">Stop</string>
</resources>